# digital-lions

./: .env.dist  .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml  docker-compose.yml  package-lock.json
backend/: .dockerignore  .env.dist  Dockerfile  Makefile  feedback.md  mypy.ini  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 2024_11_08_1825-675b36eee2fc_remove_user_table_add_roles_table.py  2024_11_10_1621-2a267f2aacfa_remove_users_table_add_roles_table.py  2024_11_10_1644-c90551dc95a0_remove_tables.py  2024_11_14_0845-a14383ea407f_allow_null_values_for_role_scope.py  2024_11_14_2029-1a7a5d2855b8_update_role_table.py  2024_11_14_2037-ecd236638299_update_roles_table.py  2024_12_29_1614-ea19ad163084_add_implementing_partners_table.py  2025_01_08_1841-70e160773171_initial_database_schema.py  2025_01_08_2006-b33b6d4dd027_initial_database_schema.py  2025_01_08_2110-e2111f447be3_change_role_type.py  2025_01_08_2114-8d2a133ddd68_change_role_type_2.py  2025_01_10_1604-dae82ed2dabe_full_initial_database_schema.py  2025_01_15_1705-f012da4cc267_add_unique_constraint_column.py  2025_01_15_1708-e1209222c8c1_add_restrict.py
backend/app/: .envrc  logging.conf  main.py
backend/app/core/: auth.py  context.py  dependencies.py  email.py  exceptions.py  settings.py
backend/app/database/: auth0.py  repositories.py  schema.py
backend/app/models/: __init__.py  (+8 more)
backend/scripts/: .envrc  README.md  export.sh  populate_db.py  token.sh  utils.py
backend/tests/: conftest.py
(+209 files in other folders)
