[project]
name = "digitallions"
version = "0.1.0"
description = "Backend API for Digital Lions"
readme = "README.md"
authors = [
    {name = "Anne Lohmeijer", email = "anne@littlelionschildcoaching.com"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "psycopg2-binary==2.9.5",
    "sqlmodel==0.0.22",
    "pydantic[email]<3.0.0,>=2.7.1",
    "bcrypt<5.0.0,>=4.1.3",
    "alembic<2.0.0,>=1.13.1",
    "pydantic-settings<3.0.0,>=2.3.0",
    "jinja2<4.0.0,>=3.1.4",
    "pyjwt<3.0.0,>=2.9.0",
    "resend<3.0.0,>=2.4.0",
    "cryptography<44.0.0,>=43.0.1",
    "httpx<1.0.0,>=0.27.0",
    "auth0-python<5.0.0,>=4.7.2",
    "python-dotenv<2.0.0,>=1.0.1",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "idna>=3.10",
]
[dependency-groups]
dev = [
    "black<25.0.0,>=24.8.0",
    "ruff<1.0.0,>=0.3.4",
    "pytest-cov<6.0.0,>=5.0.0",
    "pytest<8.0.0,>=7.4.4",
    "pytest-asyncio<1.0.0,>=0.23.3",
    "pytest-mock<4.0.0,>=3.11.1",
    "pytest-env<2.0.0,>=1.1.3",
    "isort<6.0.0,>=5.13.2",
    "faker<31.0.0,>=30.2.0",
    "click<9.0.0,>=8.1.8",
    "mypy<2.0.0,>=1.14.1",
    "pytest-bdd<9.0.0,>=8.1.0",
]
